--- a/src/components/authorization/authorization.module.css
+++ b/src/components/authorization/authorization.module.css
@@ -3,4 +3,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 70px;
+}
+.form{
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid #ffd5ff;
+    border-radius: 10px;
+}
+.main span{
+    padding-bottom: 5px;
+    padding-top: 10px;
+    font-family: sans-serif;
+    font-size: 17px;
+}
+.main input{
+    border: 1px solid #252525;
+    padding: 2px;
+    border-radius: 4px;
+    width: 180px
+}
+.main button{
+    background-color: #d4fff1;
+    padding: 10px;
+    margin-top: 15px;
+    color: #131313;
+    cursor: pointer;
+}
+
+.link{
+    all: unset;
 }
