--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -4,15 +4,34 @@
     justify-content: center;
     align-items: center;
 }
-.main>h1{
+.head{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.title>h1{
     font-size: 20px;
     font-family: sans-serif;
     font-weight: bold;
-    margin-top: 30px;
 }
-.main>img{
-    width: 200px;
+.title>h2{
+    font-size: 15px;
+    color: #656564;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-top: 5px;
+}
+.head>img{
+    width: 80px;
     border-radius: 50%;
     margin: 20px;
-    border: 5px solid #b40090;
+    border: 2px solid #b40090;
 }
