--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -10,4 +10,7 @@
     padding: 10px;
     border: 2px solid green;
     border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
 }
