--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -7,10 +7,14 @@
     position: fixed;
     left: 0;
     bottom: 0;
+
 }
 .NavBar li {
     list-style-type: none;
     padding: 5px 20px;
+}
+.NavBar img{
+    cursor: pointer;
 }
 .NavBar img:hover{
     opacity: 0.5;
@@ -18,3 +22,4 @@
 .active{
     filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(250deg) brightness(119%);
 }
+
