--- a/src/components/bigDishCard/OneDish.module.css
+++ b/src/components/bigDishCard/OneDish.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding-bottom: 10px;
 }
 .main img{
