--- a/src/components/home/catalog/catalog.module.css
+++ b/src/components/home/catalog/catalog.module.css
@@ -1,3 +1,10 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
 .List{
     display: flex;
     flex-direction: column;
