--- a/src/components/miniDishCard/miniDish.module.css
+++ b/src/components/miniDishCard/miniDish.module.css
@@ -1,6 +1,33 @@
 .main{
-
+    border: 3px solid #efcaee;
+    border-radius: 3px;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+}
+.title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0;
 }
 .name{
-    font-size: 10px;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: 600;
+}
+
+.description{
+    display: flex;
+    flex-direction: row;
+}
+
+.descriptionText{
+    margin: 5px;
+}
+
+.descriptionImg{
+
 }
