--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,7 +1,9 @@
 .main{
     width: 100%;
     height: 50px;
-    background-color: #b40090;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
     bottom: 0px;
 }
