--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -5,7 +5,7 @@
     align-items: center;
 }
 .main button {
-    margin: 40px 10px;
+    margin: 40px 10px 0 10px;
     background-color: aliceblue;
     padding: 10px;
     border: 2px solid green;
