Add Error404 when page no finded. Refactor Finder, Favorite.

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -4,10 +4,12 @@
     background-color: #fae1ff;
     width: 100%;
     justify-content: center;
+    align-items: center;
     position: fixed;
     left: 0;
     bottom: 0;
     margin: 0;
+    padding: 0;
 
 }
 .NavBar li {
