--- a/src/components/mainPages/Finder/Finder.module.css
+++ b/src/components/mainPages/Finder/Finder.module.css
@@ -1,4 +1,5 @@
 .List{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,9 +13,6 @@
     margin-right: 10px;
     margin-bottom: 0;
 }
-.input:focus+.textsDOM{
-    display: flex;
-}
 .button{
     margin-bottom: 0;
     padding: 5px 20px;
@@ -22,7 +20,20 @@
     background-color: wheat;
     border-radius: 5px;
     border-color: wheat;
+    cursor: pointer;
 }
-.textsDOM{
-display: none;
+.button:hover{
+    opacity: 80%;
+}
+.clean{
+    position: absolute;
+    left: 160px;
+    top: 14px;
+    size: 5px;
+    width: 25px;
+    cursor: pointer;
+    opacity: 60%;
+}
+.clean:hover{
+    opacity: 30%;
 }
