--- a/src/components/mainPages/home/HomeNavMenu/HomeNavMenu.module.css
+++ b/src/components/mainPages/home/HomeNavMenu/HomeNavMenu.module.css
@@ -1,7 +1,9 @@
 .main{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 .newDish{
     width: 90%;
     border: 2px solid red;
